# cockroachdb-diesel-example

./: .env  Cargo.toml  README.md
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2017-10-08-005753_trivialtest/: up.sql
src/: lib.rs  models.rs  schema.rs
